# CyberKits

./: README.md  pyproject.toml  setup-Arch.py
Defense-KITS/: admin_control.py  config.json  main.py  setup.py
Defense-KITS/log-antivirus/: fungsi.txt
Defense-KITS/modsecurity-assets/: modsecurity.conf  security2.conf
Misc/: Auto-Login.py
Misc/Auto-Login/: Auto-Login.py
Misc/Auto-Login/bypass-captcha/: Bypass-normal-captcha.py
Pentest-KITS/: Dockerfile  bypass-403.sh  client.py  enum-smb.py  main.py  parameter.py  pyproject.toml  requirements.txt  ssrf-requests.txt  ssrf.py
Pentest-KITS/CVE/: apache-2.4.49.sh  backdrop-1.27.1.py  vsftpd2.3.4.py
Pentest-KITS/common/: print_messages.py  writers.py
Pentest-KITS/common/html_page/: base.html
Pentest-KITS/modules/: readfiles.py
